--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -9,181 +9,115 @@ html, body {
 	margin: 0;
 	padding: 0;
 }
+h1 {
+	margin: 10px;
+}
 
-// For the background with the particles
-.large-header {
-	position: fixed;
-	display: fixed;
-	width: 100%;
-	height: 100%;
-	background: $bg-color;
-	background-size: cover;
-	background-position: center center;
-	z-index: 1;
-
-	// Box with custom welcome information
-	.content-box{
-		position: fixed;
-		width: 70%;
+.container {
+	font-family: $title-font;
+	padding-left: 2%;
+	.intro-name {
 		display: block;
-		height: 100%;
-		margin: 0 auto;
-		left: 0;
-		right: 0;
-		background: $content-color;	
-		// Welcome header
-		.welcome{
-			position: relative;
-			font-family: $title-font;
-			font-weight: bold;
-			color: $text-color;
-			text-align: center;
-			font-size: 6vw;
-			top: 10%;
-			margin: 0 auto;
-		}
+		color: $text-color;
+		font-size: 40px;
+	}
+	.definition {
+		display: block;
+	}
+	.section {
+		position: relative;
+		display:block;
+		font-family: $body-font;
+		font-weight: 300;
+		padding-left: 2%;
+		padding-top: 40px;
+	}
+	.my_img{
+		margin: 0;
+		float: right;
+		right: 10%;
+		width: 30%;
+		height: 40%;
+		position: relative;
+	}
+
+	.bio {
+		font-family: $title-font;
+		font-weight: 300;
+		width: 50%;
+		padding-left: 2%;
 	}
 }
 
-.verticalLine {
-	position: absolute;
-	width: 1px;
-	height: 100%;
-	float: right;
-	right: 7%;
-	background-color: $text-color;
+img {
+	margin: 0;
+	width: auto;
+	height: auto;
+	max-width: 100%;
+	max-height: 100%;
 }
 
-.navigation {
-	position: absolute;
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-	color: $text-color;
-	top: 30%;
-	right: 7%;
-
-	ul {
-		list-style-type: none;
-	}
-	//.nav-button {
-	//	@include border-radius(50%);
-	//	outline: none;
-	//}
-	.nav-tag {
-		display: inline-block;
-		width: 80%;
-	}
-}
-
-.nav-tag::after {
-	content: '';
-	display: inline-block;
-	text-align: center;
-	width: 10px;
-	height: 10px;
-	@include border-radius(50%);
-	left: 10px;
-	background-color: $text-color;
-}
-
-.u-vertical-line {
-	position: absolute;
-	width: 1px;
-	height: 30%;
-	float: right;
-	top: 0;
-	right: 7%;
-	background-color: $text-color;
-}
-
-.d-vertical-line {
-	position:absolute;
-	width: 1px;
-	height: 30%;
-	bottom:0;
-	float: right;
-	right: 7%;
-	background-color: $text-color;
-}
-
-.definition {
-	display: inline-block;
-	text-align: center;
-	margin: 0 auto;
-}
 // Control over the span words defining me
 .definition span{
 	position: absolute;
+	padding-left: 2%;
 	font-family: $title-font;
 	font-weight: bold;
-	font-size: 5vw;
-	left: 0;
-	right: 0;
-	padding-top: 10%;
+	font-size: 30px;
 	opacity: 0;
 	overflow: hidden;
 	color: $def-color;
 	@include animation(rotateDef, $numWords * $def-delay + s, linear, infinite, 0s);
 }
 
-.intro-name {
-	position: absolute;
-	display: inline-block;
-	text-align: center;
-	font-family: $title-font;
-	color: $text-color;
-	font-weight: bold;
-	font-size: 6vw;
-	padding-top: 15%;
-}
-
 @for $i from 2 through $numWords {
 	.definition span:nth-child(#{$i}) {
 		@include animation-delay($def-delay * ($i - 1) + s); 
-}
+	}
 }
 
 @-webkit-keyframes rotateDef {
 	0% { opacity: 0; }
-	2% { opacity: 0; @include translateY(-30px); }
+	2% { opacity: 0; @include translateY(-10px); }
 	5% { opacity: 1; @include translateY(0px); }
 	17% { opacity: 1; @include translateY(0px); }
-	20% { opacity: 0; @include translateY(30px); }
+	20% { opacity: 0; @include translateY(10px); }
 	80% { opacity: 0; }
 	100% { opacity: 0; }
 }
 @-ms-keyframes rotateDef {
 	0% { opacity: 0; }
-	2% { opacity: 0; @include translateY(-30px); }
+	2% { opacity: 0; @include translateY(-10px); }
 	5% { opacity: 1; @include translateY(0px); }
 	17% { opacity: 1; @include translateY(0px); }
-	20% { opacity: 0; @include translateY(30px); }
+	20% { opacity: 0; @include translateY(10px); }
 	80% { opacity: 0; }
 	100% { opacity: 0; }
 }
 @-moz-keyframes rotateDef {
 	0% { opacity: 0; }
-	2% { opacity: 0; @include translateY(-30px); }
+	2% { opacity: 0; @include translateY(-10px); }
 	5% { opacity: 1; @include translateY(0px); }
 	17% { opacity: 1; @include translateY(0px); }
-	20% { opacity: 0; @include translateY(30px); }
+	20% { opacity: 0; @include translateY(10px); }
 	80% { opacity: 0; }
 	100% { opacity: 0; }
 }
 @-o-keyframes rotateDef {
 	0% { opacity: 0; }
-	2% { opacity: 0; @include translateY(-30px); }
+	2% { opacity: 0; @include translateY(-10px); }
 	5% { opacity: 1; @include translateY(0px); }
 	17% { opacity: 1; @include translateY(0px); }
-	20% { opacity: 0; @include translateY(30px); }
+	20% { opacity: 0; @include translateY(10px); }
 	80% { opacity: 0; }
 	100% { opacity: 0; }
 }
 @keyframes rotateDef {
 	0% { opacity: 0; }
-	2% { opacity: 0; @include translateY(-30px); }
+	2% { opacity: 0; @include translateY(-10px); }
 	5% { opacity: 1; @include translateY(0px); }
 	17% { opacity: 1; @include translateY(0px); }
-	20% { opacity: 0; @include translateY(30px); }
+	20% { opacity: 0; @include translateY(10px); }
 	80% { opacity: 0; }
 	100% { opacity: 0; }
 }
