--- a/new/sass/partials/_variables.scss
+++ b/new/sass/partials/_variables.scss
@@ -1,7 +1,7 @@
-$bg-color: #393939;
 $content-color: #222222;
 $text-color: #A9A9A9;
-$def-delay: 8;
-$numWords: 4;
+$def-delay: 3;
+$numWords: 5;
 $def-color: #DF3939;
-$title-font: 'Roboto Slab'
+$title-font: 'Nunito', sans-serif;
+$body-font: 'Raleway', sans-serif;
