--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -51,8 +51,49 @@ h1 {
   width: 50%;
   padding-left: 2%;
 }
+/* line 51, ../sass/main.scss */
+.container .bottom-nav {
+  position: fixed;
+  width: 100%;
+  left: 0px;
+  bottom: 20px;
+  border-bottom: 1px solid #000000;
+}
+/* line 58, ../sass/main.scss */
+.container .bottom-nav .content {
+  display: inline;
+  text-align: center;
+}
 
-/* line 52, ../sass/main.scss */
+/* line 64, ../sass/main.scss */
+ul {
+  list-style: none;
+}
+
+/* line 67, ../sass/main.scss */
+li {
+  display: inline-block;
+  margin: 0 3% 0 3%;
+}
+/* line 71, ../sass/main.scss */
+li .cross {
+  position: absolute;
+  background: white;
+  text-align: center;
+  margin: 0 -0.5% 0 -1%;
+  top: 40px;
+  width: 30px;
+}
+
+/* line 81, ../sass/main.scss */
+.nav_line {
+  display: block;
+  position: relative;
+  width: 100;
+  margin-left: 0;
+}
+
+/* line 87, ../sass/main.scss */
 img {
   margin: 0;
   width: auto;
@@ -61,7 +102,7 @@ img {
   max-height: 100%;
 }
 
-/* line 61, ../sass/main.scss */
+/* line 96, ../sass/main.scss */
 .definition span {
   position: absolute;
   padding-left: 2%;
@@ -78,7 +119,7 @@ img {
   animation: rotateDef 15s linear infinite 0s;
 }
 
-/* line 74, ../sass/main.scss */
+/* line 109, ../sass/main.scss */
 .definition span:nth-child(2) {
   -webkit-animation-delay: 3s;
   -moz-animation-delay: 3s;
@@ -87,7 +128,7 @@ img {
   animation-delay: 3s;
 }
 
-/* line 74, ../sass/main.scss */
+/* line 109, ../sass/main.scss */
 .definition span:nth-child(3) {
   -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
@@ -96,7 +137,7 @@ img {
   animation-delay: 6s;
 }
 
-/* line 74, ../sass/main.scss */
+/* line 109, ../sass/main.scss */
 .definition span:nth-child(4) {
   -webkit-animation-delay: 9s;
   -moz-animation-delay: 9s;
@@ -105,7 +146,7 @@ img {
   animation-delay: 9s;
 }
 
-/* line 74, ../sass/main.scss */
+/* line 109, ../sass/main.scss */
 .definition span:nth-child(5) {
   -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
