--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -9,6 +9,15 @@ html, body {
 	margin: 0;
 	padding: 0;
 }
+
+html {
+	background: url("../images/bg_about.png") no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
 h1 {
 	margin: 10px;
 }
@@ -47,7 +56,7 @@ h1 {
 		width: 50%;
 		padding-left: 2%;
 	}
-	
+
 	.bottom-nav{
 		position: fixed;
 		width: 100%;
