--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -6,27 +6,36 @@ html, body {
   padding: 0;
 }
 
-/* line 12, ../sass/main.scss */
+/* line 13, ../sass/main.scss */
+html {
+  background: url("../images/bg_about.png") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+/* line 21, ../sass/main.scss */
 h1 {
   margin: 10px;
 }
 
-/* line 16, ../sass/main.scss */
+/* line 25, ../sass/main.scss */
 .container {
   font-family: "Nunito", sans-serif;
   padding-left: 2%;
 }
-/* line 19, ../sass/main.scss */
+/* line 28, ../sass/main.scss */
 .container .intro-name {
   display: block;
   color: #A9A9A9;
   font-size: 40px;
 }
-/* line 24, ../sass/main.scss */
+/* line 33, ../sass/main.scss */
 .container .definition {
   display: block;
 }
-/* line 27, ../sass/main.scss */
+/* line 36, ../sass/main.scss */
 .container .section {
   position: relative;
   display: block;
@@ -35,7 +44,7 @@ h1 {
   padding-left: 2%;
   padding-top: 40px;
 }
-/* line 35, ../sass/main.scss */
+/* line 44, ../sass/main.scss */
 .container .my_img {
   margin: 0;
   float: right;
@@ -44,14 +53,14 @@ h1 {
   height: 40%;
   position: relative;
 }
-/* line 44, ../sass/main.scss */
+/* line 53, ../sass/main.scss */
 .container .bio {
   font-family: "Nunito", sans-serif;
   font-weight: 300;
   width: 50%;
   padding-left: 2%;
 }
-/* line 51, ../sass/main.scss */
+/* line 60, ../sass/main.scss */
 .container .bottom-nav {
   position: fixed;
   width: 100%;
@@ -59,23 +68,23 @@ h1 {
   bottom: 20px;
   border-bottom: 1px solid #000000;
 }
-/* line 58, ../sass/main.scss */
+/* line 67, ../sass/main.scss */
 .container .bottom-nav .content {
   display: inline;
   text-align: center;
 }
 
-/* line 64, ../sass/main.scss */
+/* line 73, ../sass/main.scss */
 ul {
   list-style: none;
 }
 
-/* line 67, ../sass/main.scss */
+/* line 76, ../sass/main.scss */
 li {
   display: inline-block;
   margin: 0 3% 0 3%;
 }
-/* line 71, ../sass/main.scss */
+/* line 80, ../sass/main.scss */
 li .cross {
   position: absolute;
   background: white;
@@ -85,7 +94,7 @@ li .cross {
   width: 30px;
 }
 
-/* line 81, ../sass/main.scss */
+/* line 90, ../sass/main.scss */
 .nav_line {
   display: block;
   position: relative;
@@ -93,7 +102,7 @@ li .cross {
   margin-left: 0;
 }
 
-/* line 87, ../sass/main.scss */
+/* line 96, ../sass/main.scss */
 img {
   margin: 0;
   width: auto;
@@ -102,7 +111,7 @@ img {
   max-height: 100%;
 }
 
-/* line 96, ../sass/main.scss */
+/* line 105, ../sass/main.scss */
 .definition span {
   position: absolute;
   padding-left: 2%;
@@ -119,7 +128,7 @@ img {
   animation: rotateDef 15s linear infinite 0s;
 }
 
-/* line 109, ../sass/main.scss */
+/* line 118, ../sass/main.scss */
 .definition span:nth-child(2) {
   -webkit-animation-delay: 3s;
   -moz-animation-delay: 3s;
@@ -128,7 +137,7 @@ img {
   animation-delay: 3s;
 }
 
-/* line 109, ../sass/main.scss */
+/* line 118, ../sass/main.scss */
 .definition span:nth-child(3) {
   -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
@@ -137,7 +146,7 @@ img {
   animation-delay: 6s;
 }
 
-/* line 109, ../sass/main.scss */
+/* line 118, ../sass/main.scss */
 .definition span:nth-child(4) {
   -webkit-animation-delay: 9s;
   -moz-animation-delay: 9s;
@@ -146,7 +155,7 @@ img {
   animation-delay: 9s;
 }
 
-/* line 109, ../sass/main.scss */
+/* line 118, ../sass/main.scss */
 .definition span:nth-child(5) {
   -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
