--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -18,6 +18,7 @@ html {
 	background-size: cover;
 }
 
+
 h1 {
 	margin: 10px;
 }
@@ -74,6 +75,7 @@ ul {
 	list-style: none;
 }
 li {
+	cursor: pointer;
 	display: inline-block;
 	margin: 0 3% 0 3%;
 
