--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -15,27 +15,27 @@ html {
   background-size: cover;
 }
 
-/* line 21, ../sass/main.scss */
+/* line 22, ../sass/main.scss */
 h1 {
   margin: 10px;
 }
 
-/* line 25, ../sass/main.scss */
+/* line 26, ../sass/main.scss */
 .container {
   font-family: "Nunito", sans-serif;
   padding-left: 2%;
 }
-/* line 28, ../sass/main.scss */
+/* line 29, ../sass/main.scss */
 .container .intro-name {
   display: block;
   color: #A9A9A9;
   font-size: 40px;
 }
-/* line 33, ../sass/main.scss */
+/* line 34, ../sass/main.scss */
 .container .definition {
   display: block;
 }
-/* line 36, ../sass/main.scss */
+/* line 37, ../sass/main.scss */
 .container .section {
   position: relative;
   display: block;
@@ -44,7 +44,7 @@ h1 {
   padding-left: 2%;
   padding-top: 40px;
 }
-/* line 44, ../sass/main.scss */
+/* line 45, ../sass/main.scss */
 .container .my_img {
   margin: 0;
   float: right;
@@ -53,14 +53,14 @@ h1 {
   height: 35%;
   position: relative;
 }
-/* line 53, ../sass/main.scss */
+/* line 54, ../sass/main.scss */
 .container .bio {
   font-family: "Nunito", sans-serif;
   font-weight: 300;
   width: 50%;
   padding-left: 2%;
 }
-/* line 60, ../sass/main.scss */
+/* line 61, ../sass/main.scss */
 .container .bottom-nav {
   position: fixed;
   width: 100%;
@@ -68,23 +68,24 @@ h1 {
   bottom: 20px;
   border-bottom: 1px solid #000000;
 }
-/* line 67, ../sass/main.scss */
+/* line 68, ../sass/main.scss */
 .container .bottom-nav .content {
   display: inline;
   text-align: center;
 }
 
-/* line 73, ../sass/main.scss */
+/* line 74, ../sass/main.scss */
 ul {
   list-style: none;
 }
 
-/* line 76, ../sass/main.scss */
+/* line 77, ../sass/main.scss */
 li {
+  cursor: pointer;
   display: inline-block;
   margin: 0 3% 0 3%;
 }
-/* line 80, ../sass/main.scss */
+/* line 82, ../sass/main.scss */
 li .cross {
   position: absolute;
   background: white;
@@ -94,7 +95,7 @@ li .cross {
   width: 30px;
 }
 
-/* line 90, ../sass/main.scss */
+/* line 92, ../sass/main.scss */
 .nav_line {
   display: block;
   position: relative;
@@ -102,7 +103,7 @@ li .cross {
   margin-left: 0;
 }
 
-/* line 96, ../sass/main.scss */
+/* line 98, ../sass/main.scss */
 img {
   margin: 0;
   width: auto;
@@ -111,7 +112,7 @@ img {
   max-height: 100%;
 }
 
-/* line 105, ../sass/main.scss */
+/* line 107, ../sass/main.scss */
 .definition span {
   position: absolute;
   padding-left: 2%;
@@ -128,7 +129,7 @@ img {
   animation: rotateDef 15s linear infinite 0s;
 }
 
-/* line 118, ../sass/main.scss */
+/* line 120, ../sass/main.scss */
 .definition span:nth-child(2) {
   -webkit-animation-delay: 3s;
   -moz-animation-delay: 3s;
@@ -137,7 +138,7 @@ img {
   animation-delay: 3s;
 }
 
-/* line 118, ../sass/main.scss */
+/* line 120, ../sass/main.scss */
 .definition span:nth-child(3) {
   -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
@@ -146,7 +147,7 @@ img {
   animation-delay: 6s;
 }
 
-/* line 118, ../sass/main.scss */
+/* line 120, ../sass/main.scss */
 .definition span:nth-child(4) {
   -webkit-animation-delay: 9s;
   -moz-animation-delay: 9s;
@@ -155,7 +156,7 @@ img {
   animation-delay: 9s;
 }
 
-/* line 118, ../sass/main.scss */
+/* line 120, ../sass/main.scss */
 .definition span:nth-child(5) {
   -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
