--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -11,17 +11,13 @@ html, body {
 }
 
 html {
-	background: url("../images/bg_about.png") no-repeat center center fixed;
+	background-image: url("../images/bg_about.png") no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
 }
 
-
-h1 {
-	margin: 10px;
-}
 
 .container {
 	font-family: $title-font;
@@ -37,9 +33,9 @@ h1 {
 	.section {
 		position: relative;
 		display:block;
+		padding-left: -2%;
 		font-family: $body-font;
 		font-weight: 300;
-		padding-left: 2%;
 		padding-top: 40px;
 	}
 	.my_img{
@@ -53,9 +49,9 @@ h1 {
 
 	.bio {
 		font-family: $title-font;
+		float: left;
 		font-weight: 300;
 		width: 50%;
-		padding-left: 2%;
 	}
 
 	.bottom-nav{
@@ -70,6 +66,9 @@ h1 {
 			text-align: center;
 		}
 	}
+}
+.work-container {
+	
 }
 ul {
 	list-style: none;
@@ -106,7 +105,6 @@ img {
 // Control over the span words defining me
 .definition span{
 	position: absolute;
-	padding-left: 2%;
 	font-family: $title-font;
 	font-weight: bold;
 	font-size: 30px;
