--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -8,7 +8,7 @@ html, body {
 
 /* line 13, ../sass/main.scss */
 html {
-  background: url("../images/bg_about.png") no-repeat center center fixed;
+  background-image: url("../images/bg_about.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -16,35 +16,30 @@ html {
 }
 
 /* line 22, ../sass/main.scss */
-h1 {
-  margin: 10px;
-}
-
-/* line 26, ../sass/main.scss */
 .container {
   font-family: "Nunito", sans-serif;
   padding-left: 2%;
 }
-/* line 29, ../sass/main.scss */
+/* line 25, ../sass/main.scss */
 .container .intro-name {
   display: block;
   color: #A9A9A9;
   font-size: 40px;
 }
-/* line 34, ../sass/main.scss */
+/* line 30, ../sass/main.scss */
 .container .definition {
   display: block;
 }
-/* line 37, ../sass/main.scss */
+/* line 33, ../sass/main.scss */
 .container .section {
   position: relative;
   display: block;
+  padding-left: -2%;
   font-family: "Raleway", sans-serif;
   font-weight: 300;
-  padding-left: 2%;
   padding-top: 40px;
 }
-/* line 45, ../sass/main.scss */
+/* line 41, ../sass/main.scss */
 .container .my_img {
   margin: 0;
   float: right;
@@ -53,14 +48,14 @@ h1 {
   height: 35%;
   position: relative;
 }
-/* line 54, ../sass/main.scss */
+/* line 50, ../sass/main.scss */
 .container .bio {
   font-family: "Nunito", sans-serif;
+  float: left;
   font-weight: 300;
   width: 50%;
-  padding-left: 2%;
 }
-/* line 61, ../sass/main.scss */
+/* line 57, ../sass/main.scss */
 .container .bottom-nav {
   position: fixed;
   width: 100%;
@@ -68,24 +63,24 @@ h1 {
   bottom: 20px;
   border-bottom: 1px solid #000000;
 }
-/* line 68, ../sass/main.scss */
+/* line 64, ../sass/main.scss */
 .container .bottom-nav .content {
   display: inline;
   text-align: center;
 }
 
-/* line 74, ../sass/main.scss */
+/* line 73, ../sass/main.scss */
 ul {
   list-style: none;
 }
 
-/* line 77, ../sass/main.scss */
+/* line 76, ../sass/main.scss */
 li {
   cursor: pointer;
   display: inline-block;
   margin: 0 3% 0 3%;
 }
-/* line 82, ../sass/main.scss */
+/* line 81, ../sass/main.scss */
 li .cross {
   position: absolute;
   background: white;
@@ -95,7 +90,7 @@ li .cross {
   width: 30px;
 }
 
-/* line 92, ../sass/main.scss */
+/* line 91, ../sass/main.scss */
 .nav_line {
   display: block;
   position: relative;
@@ -103,7 +98,7 @@ li .cross {
   margin-left: 0;
 }
 
-/* line 98, ../sass/main.scss */
+/* line 97, ../sass/main.scss */
 img {
   margin: 0;
   width: auto;
@@ -112,10 +107,9 @@ img {
   max-height: 100%;
 }
 
-/* line 107, ../sass/main.scss */
+/* line 106, ../sass/main.scss */
 .definition span {
   position: absolute;
-  padding-left: 2%;
   font-family: "Nunito", sans-serif;
   font-weight: bold;
   font-size: 30px;
@@ -129,7 +123,7 @@ img {
   animation: rotateDef 15s linear infinite 0s;
 }
 
-/* line 120, ../sass/main.scss */
+/* line 118, ../sass/main.scss */
 .definition span:nth-child(2) {
   -webkit-animation-delay: 3s;
   -moz-animation-delay: 3s;
@@ -138,7 +132,7 @@ img {
   animation-delay: 3s;
 }
 
-/* line 120, ../sass/main.scss */
+/* line 118, ../sass/main.scss */
 .definition span:nth-child(3) {
   -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
@@ -147,7 +141,7 @@ img {
   animation-delay: 6s;
 }
 
-/* line 120, ../sass/main.scss */
+/* line 118, ../sass/main.scss */
 .definition span:nth-child(4) {
   -webkit-animation-delay: 9s;
   -moz-animation-delay: 9s;
@@ -156,7 +150,7 @@ img {
   animation-delay: 9s;
 }
 
-/* line 120, ../sass/main.scss */
+/* line 118, ../sass/main.scss */
 .definition span:nth-child(5) {
   -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
