--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -42,7 +42,6 @@ html {
 .container .my_img {
   margin: 0;
   float: right;
-  right: 13%;
   width: 30%;
   height: 35%;
   position: relative;
@@ -51,10 +50,11 @@ html {
 .container .bio {
   font-family: "Nunito", sans-serif;
   float: left;
+  padding-left: 15px;
   font-weight: 300;
   width: 50%;
 }
-/* line 56, ../sass/main.scss */
+/* line 57, ../sass/main.scss */
 .container .bottom-nav {
   position: fixed;
   width: 100%;
@@ -62,24 +62,24 @@ html {
   bottom: 20px;
   border-bottom: 1px solid #000000;
 }
-/* line 63, ../sass/main.scss */
+/* line 64, ../sass/main.scss */
 .container .bottom-nav .content {
   display: inline;
   text-align: center;
 }
 
-/* line 72, ../sass/main.scss */
+/* line 73, ../sass/main.scss */
 ul {
   list-style: none;
 }
 
-/* line 75, ../sass/main.scss */
+/* line 76, ../sass/main.scss */
 li {
   cursor: pointer;
   display: inline-block;
   margin: 0 3% 0 3%;
 }
-/* line 80, ../sass/main.scss */
+/* line 81, ../sass/main.scss */
 li .cross {
   position: absolute;
   background: white;
@@ -88,7 +88,7 @@ li .cross {
   width: 30px;
 }
 
-/* line 89, ../sass/main.scss */
+/* line 90, ../sass/main.scss */
 .nav_line {
   display: block;
   position: relative;
@@ -96,7 +96,7 @@ li .cross {
   margin-left: 0;
 }
 
-/* line 95, ../sass/main.scss */
+/* line 96, ../sass/main.scss */
 img {
   margin: 0;
   width: auto;
@@ -105,7 +105,7 @@ img {
   max-height: 100%;
 }
 
-/* line 104, ../sass/main.scss */
+/* line 105, ../sass/main.scss */
 .definition span {
   position: absolute;
   font-family: "Nunito", sans-serif;
@@ -121,7 +121,7 @@ img {
   animation: rotateDef 15s linear infinite 0s;
 }
 
-/* line 116, ../sass/main.scss */
+/* line 117, ../sass/main.scss */
 .definition span:nth-child(2) {
   -webkit-animation-delay: 3s;
   -moz-animation-delay: 3s;
@@ -130,7 +130,7 @@ img {
   animation-delay: 3s;
 }
 
-/* line 116, ../sass/main.scss */
+/* line 117, ../sass/main.scss */
 .definition span:nth-child(3) {
   -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
@@ -139,7 +139,7 @@ img {
   animation-delay: 6s;
 }
 
-/* line 116, ../sass/main.scss */
+/* line 117, ../sass/main.scss */
 .definition span:nth-child(4) {
   -webkit-animation-delay: 9s;
   -moz-animation-delay: 9s;
@@ -148,7 +148,7 @@ img {
   animation-delay: 9s;
 }
 
-/* line 116, ../sass/main.scss */
+/* line 117, ../sass/main.scss */
 .definition span:nth-child(5) {
   -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
