--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -11,7 +11,7 @@ html, body {
 }
 
 html {
-	background-image: url("../images/bg_about.png") no-repeat center center fixed;
+//	background-image: url("../images/bg_about.png") no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -30,33 +30,56 @@ html {
 	.definition {
 		display: block;
 	}
-	.section {
-		position: relative;
-		display:block;
-		font-family: $body-font;
-		font-weight: 300;
-		padding-top: 40px;
-	}
-	.my_img{
-		margin: 0;
-		float: right;
-		//right: 13%;
-		width: 30%;
-		height: 35%;
-		position: relative;
-	}
+	.abt-container {
+		.section {
+			position: relative;
+			display:block;
+			font-family: $body-font;
+			font-weight: 300;
+			padding-top: 40px;
+		}
+		.my_img{
+			float: right;
+			height: 50vw;
+			position: relative;
+		}
 
-	.bio {
-		font-family: $title-font;
-		float: left;
-		padding-left: 15px;
-		font-weight: 300;
-		width: 50%;
+		.bio {
+			font-family: $title-font;
+			float: left;
+			margin: 0;
+			padding-left: 15px;
+			font-weight: 300;
+		}
+	}
+	.work-container {
+
+		.software{
+			float: left;
+			border: 1px solid #000000;
+			height: 40vw;
+			position: relative;
+			display: block;
+			margin-top: 50px;
+			margin-bottom: 50px;
+		}
+
+		.design {
+			float: left;
+			border: 1px solid #000000;
+			height: 40vw;
+			position: relative;
+			display: block;
+			margin-top: 50px;
+			margin-bottom: 50px;
+		}
 	}
 
 	.bottom-nav{
 		position: fixed;
 		width: 100%;
+		margin-left: 0;
+		padding: 0;
 		left: 0px;
 		bottom: 20px;
 		border-bottom: 1px solid #000000;
@@ -67,9 +90,6 @@ html {
 		}
 	}
 }
-.work-container {
-	
-}
 ul {
 	list-style: none;
 }
@@ -79,10 +99,11 @@ li {
 	margin: 0 3% 0 3%;
 
 	.cross {
+		display: block;
 		position: absolute;
 		background: white;
 		text-align: center;
-		margin: 0 -0.5% 0 -1%;
+		margin: 0 -0.5% 0 0%;
 		width: 30px;
 	}
 }
