--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -8,7 +8,6 @@ html, body {
 
 /* line 13, ../sass/main.scss */
 html {
-  background-image: url("../images/bg_about.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -30,65 +29,86 @@ html {
 .container .definition {
   display: block;
 }
-/* line 33, ../sass/main.scss */
-.container .section {
+/* line 34, ../sass/main.scss */
+.container .abt-container .section {
   position: relative;
   display: block;
   font-family: "Raleway", sans-serif;
   font-weight: 300;
   padding-top: 40px;
 }
-/* line 40, ../sass/main.scss */
-.container .my_img {
-  margin: 0;
+/* line 41, ../sass/main.scss */
+.container .abt-container .my_img {
   float: right;
-  width: 30%;
-  height: 35%;
+  height: 50vw;
   position: relative;
 }
-/* line 49, ../sass/main.scss */
-.container .bio {
+/* line 47, ../sass/main.scss */
+.container .abt-container .bio {
   font-family: "Nunito", sans-serif;
   float: left;
+  margin: 0;
   padding-left: 15px;
   font-weight: 300;
-  width: 50%;
 }
 /* line 57, ../sass/main.scss */
+.container .work-container .software {
+  float: left;
+  border: 1px solid #000000;
+  height: 40vw;
+  position: relative;
+  display: block;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+/* line 67, ../sass/main.scss */
+.container .work-container .design {
+  float: left;
+  border: 1px solid #000000;
+  height: 40vw;
+  position: relative;
+  display: block;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+/* line 78, ../sass/main.scss */
 .container .bottom-nav {
   position: fixed;
   width: 100%;
+  margin-left: 0;
+  padding: 0;
   left: 0px;
   bottom: 20px;
   border-bottom: 1px solid #000000;
 }
-/* line 64, ../sass/main.scss */
+/* line 87, ../sass/main.scss */
 .container .bottom-nav .content {
   display: inline;
   text-align: center;
 }
 
-/* line 73, ../sass/main.scss */
+/* line 93, ../sass/main.scss */
 ul {
   list-style: none;
 }
 
-/* line 76, ../sass/main.scss */
+/* line 96, ../sass/main.scss */
 li {
   cursor: pointer;
   display: inline-block;
   margin: 0 3% 0 3%;
 }
-/* line 81, ../sass/main.scss */
+/* line 101, ../sass/main.scss */
 li .cross {
+  display: block;
   position: absolute;
   background: white;
   text-align: center;
-  margin: 0 -0.5% 0 -1%;
+  margin: 0 -0.5% 0 0%;
   width: 30px;
 }
 
-/* line 90, ../sass/main.scss */
+/* line 111, ../sass/main.scss */
 .nav_line {
   display: block;
   position: relative;
@@ -96,7 +116,7 @@ li .cross {
   margin-left: 0;
 }
 
-/* line 96, ../sass/main.scss */
+/* line 117, ../sass/main.scss */
 img {
   margin: 0;
   width: auto;
@@ -105,7 +125,7 @@ img {
   max-height: 100%;
 }
 
-/* line 105, ../sass/main.scss */
+/* line 126, ../sass/main.scss */
 .definition span {
   position: absolute;
   font-family: "Nunito", sans-serif;
@@ -121,7 +141,7 @@ img {
   animation: rotateDef 15s linear infinite 0s;
 }
 
-/* line 117, ../sass/main.scss */
+/* line 138, ../sass/main.scss */
 .definition span:nth-child(2) {
   -webkit-animation-delay: 3s;
   -moz-animation-delay: 3s;
@@ -130,7 +150,7 @@ img {
   animation-delay: 3s;
 }
 
-/* line 117, ../sass/main.scss */
+/* line 138, ../sass/main.scss */
 .definition span:nth-child(3) {
   -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
@@ -139,7 +159,7 @@ img {
   animation-delay: 6s;
 }
 
-/* line 117, ../sass/main.scss */
+/* line 138, ../sass/main.scss */
 .definition span:nth-child(4) {
   -webkit-animation-delay: 9s;
   -moz-animation-delay: 9s;
@@ -148,7 +168,7 @@ img {
   animation-delay: 9s;
 }
 
-/* line 117, ../sass/main.scss */
+/* line 138, ../sass/main.scss */
 .definition span:nth-child(5) {
   -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
