--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -56,7 +56,7 @@ html {
 
 		.software{
 			float: left;
-			border: 1px solid #000000;
+			//border: 1px solid #000000;
 			height: 40vw;
 			position: relative;
 			display: block;
@@ -81,10 +81,10 @@ html {
 
 		.design {
 			float: right;
-			border: 1px solid #000000;
+			//border: 1px solid #000000;
 			height: 40vw;
 			position: relative;
-			display: block;
+			display: inline-block;
 			margin-top: 50px;
 			margin-bottom: 50px;
 			#design{
@@ -143,7 +143,7 @@ li {
 	width: 100;
 	margin-left: 0;
 }
-img {
+#jahan {
 	margin: 0;
 	width: auto;
 	height: auto;
