--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -52,6 +52,7 @@ html {
 			font-weight: 300;
 		}
 	}
+
 	.work-container {
 
 		.software{
@@ -62,46 +63,6 @@ html {
 			display: block;
 			margin-top: 50px;
 			margin-bottom: 50px;
-			.multi-item-carousel{
-				display: block;
-				position: absolute;
-				top: 0;
-				bottom: 0;
-				left: 0;
-				right: 0;
-				.carousel-inner{
-					> .item{
-						transition: 500ms ease-in-out left;
-					}
-					.active{
-						&.left{
-							left:-33%;
-						}
-						&.right{
-							left:33%;
-						}
-					}
-					.next{
-						left: 33%;
-					}
-					.prev{
-						left: -33%;
-					}
-					@media all and (transform-3d), (-webkit-transform-3d) {
-						> .item{
-							// use your favourite prefixer here
-							transition: 500ms ease-in-out all;
-							backface-visibility: visible;
-							transform: none!important;
-						}
-					}
-				}
-				.carouse-control{
-					&.left, &.right{
-						background-image: none;
-					}
-				}
-			}
 			#code{
 				cursor: pointer;
 				display: block;
@@ -144,18 +105,23 @@ html {
 		}
 	}
 
-	.bottom-nav{
+	.nav-bg{
 		position: fixed;
-		width: 100%;
-		margin-left: 0;
+		margin: 0;
 		padding: 0;
+		background: white;
 		left: 0px;
-		bottom: 20px;
-		border-bottom: 1px solid #000000;
+		height: 30px;
+		z-index: 0;
+		.bottom-nav{
+			z-index: 1;
+			bottom: 20px;
+			border-bottom: 1px solid #000000;
 
-		.content {
-			display: inline;
-			text-align: center;
+			.content {
+				display: inline;
+				text-align: center;
+			}
 		}
 	}
 }
