--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -51,7 +51,7 @@ html {
   padding-left: 15px;
   font-weight: 300;
 }
-/* line 57, ../sass/main.scss */
+/* line 58, ../sass/main.scss */
 .container .work-container .software {
   float: left;
   height: 40vw;
@@ -60,48 +60,7 @@ html {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-/* line 65, ../sass/main.scss */
-.container .work-container .software .multi-item-carousel {
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-/* line 73, ../sass/main.scss */
-.container .work-container .software .multi-item-carousel .carousel-inner > .item {
-  transition: 500ms ease-in-out left;
-}
-/* line 77, ../sass/main.scss */
-.container .work-container .software .multi-item-carousel .carousel-inner .active.left {
-  left: -33%;
-}
-/* line 80, ../sass/main.scss */
-.container .work-container .software .multi-item-carousel .carousel-inner .active.right {
-  left: 33%;
-}
-/* line 84, ../sass/main.scss */
-.container .work-container .software .multi-item-carousel .carousel-inner .next {
-  left: 33%;
-}
-/* line 87, ../sass/main.scss */
-.container .work-container .software .multi-item-carousel .carousel-inner .prev {
-  left: -33%;
-}
-@media all and (transform-3d), (-webkit-transform-3d) {
-  /* line 91, ../sass/main.scss */
-  .container .work-container .software .multi-item-carousel .carousel-inner > .item {
-    transition: 500ms ease-in-out all;
-    backface-visibility: visible;
-    transform: none !important;
-  }
-}
-/* line 100, ../sass/main.scss */
-.container .work-container .software .multi-item-carousel .carouse-control.left, .container .work-container .software .multi-item-carousel .carouse-control.right {
-  background-image: none;
-}
-/* line 105, ../sass/main.scss */
+/* line 66, ../sass/main.scss */
 .container .work-container .software #code {
   cursor: pointer;
   display: block;
@@ -113,11 +72,11 @@ html {
   margin: auto;
   transition: .2s ease-in-out;
 }
-/* line 117, ../sass/main.scss */
+/* line 78, ../sass/main.scss */
 .container .work-container .software #code:hover {
   transform: scale(1.1);
 }
-/* line 122, ../sass/main.scss */
+/* line 83, ../sass/main.scss */
 .container .work-container .design {
   float: right;
   height: 40vw;
@@ -126,7 +85,7 @@ html {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-/* line 130, ../sass/main.scss */
+/* line 91, ../sass/main.scss */
 .container .work-container .design #design {
   cursor: pointer;
   display: block;
@@ -138,38 +97,44 @@ html {
   margin: auto;
   transition: .2s ease-in-out;
 }
-/* line 141, ../sass/main.scss */
+/* line 102, ../sass/main.scss */
 .container .work-container .design #design:hover {
   transform: scale(1.1);
 }
-/* line 147, ../sass/main.scss */
-.container .bottom-nav {
+/* line 108, ../sass/main.scss */
+.container .nav-bg {
   position: fixed;
-  width: 100%;
-  margin-left: 0;
+  margin: 0;
   padding: 0;
+  background: white;
   left: 0px;
+  height: 30px;
+  z-index: 0;
+}
+/* line 116, ../sass/main.scss */
+.container .nav-bg .bottom-nav {
+  z-index: 1;
   bottom: 20px;
   border-bottom: 1px solid #000000;
 }
-/* line 156, ../sass/main.scss */
-.container .bottom-nav .content {
+/* line 121, ../sass/main.scss */
+.container .nav-bg .bottom-nav .content {
   display: inline;
   text-align: center;
 }
 
-/* line 162, ../sass/main.scss */
+/* line 128, ../sass/main.scss */
 ul {
   list-style: none;
 }
 
-/* line 165, ../sass/main.scss */
+/* line 131, ../sass/main.scss */
 li {
   cursor: pointer;
   display: inline-block;
   margin: 0 3% 0 3%;
 }
-/* line 170, ../sass/main.scss */
+/* line 136, ../sass/main.scss */
 li .cross {
   display: block;
   position: absolute;
@@ -179,7 +144,7 @@ li .cross {
   width: 30px;
 }
 
-/* line 180, ../sass/main.scss */
+/* line 146, ../sass/main.scss */
 .nav_line {
   display: block;
   position: relative;
@@ -187,7 +152,7 @@ li .cross {
   margin-left: 0;
 }
 
-/* line 186, ../sass/main.scss */
+/* line 152, ../sass/main.scss */
 #jahan {
   margin: 0;
   width: auto;
@@ -196,7 +161,7 @@ li .cross {
   max-height: 100%;
 }
 
-/* line 195, ../sass/main.scss */
+/* line 161, ../sass/main.scss */
 .definition span {
   position: absolute;
   font-family: "Nunito", sans-serif;
@@ -212,7 +177,7 @@ li .cross {
   animation: rotateDef 15s linear infinite 0s;
 }
 
-/* line 207, ../sass/main.scss */
+/* line 173, ../sass/main.scss */
 .definition span:nth-child(2) {
   -webkit-animation-delay: 3s;
   -moz-animation-delay: 3s;
@@ -221,7 +186,7 @@ li .cross {
   animation-delay: 3s;
 }
 
-/* line 207, ../sass/main.scss */
+/* line 173, ../sass/main.scss */
 .definition span:nth-child(3) {
   -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
@@ -230,7 +195,7 @@ li .cross {
   animation-delay: 6s;
 }
 
-/* line 207, ../sass/main.scss */
+/* line 173, ../sass/main.scss */
 .definition span:nth-child(4) {
   -webkit-animation-delay: 9s;
   -moz-animation-delay: 9s;
@@ -239,7 +204,7 @@ li .cross {
   animation-delay: 9s;
 }
 
-/* line 207, ../sass/main.scss */
+/* line 173, ../sass/main.scss */
 .definition span:nth-child(5) {
   -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
