--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -54,13 +54,21 @@ html {
 /* line 58, ../sass/main.scss */
 .container .work-container .software {
   float: left;
+  border-right: 0.5px solid #D8D8D8;
   height: 40vw;
   position: relative;
   display: block;
   margin-top: 50px;
   margin-bottom: 50px;
+  text-align: center;
 }
-/* line 66, ../sass/main.scss */
+/* line 67, ../sass/main.scss */
+.container .work-container .software .projects {
+  display: inline-block;
+  margin: 0;
+  width: 80%;
+}
+/* line 73, ../sass/main.scss */
 .container .work-container .software #code {
   cursor: pointer;
   display: block;
@@ -72,11 +80,11 @@ html {
   margin: auto;
   transition: .2s ease-in-out;
 }
-/* line 78, ../sass/main.scss */
+/* line 85, ../sass/main.scss */
 .container .work-container .software #code:hover {
   transform: scale(1.1);
 }
-/* line 83, ../sass/main.scss */
+/* line 90, ../sass/main.scss */
 .container .work-container .design {
   float: right;
   height: 40vw;
@@ -85,7 +93,7 @@ html {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-/* line 91, ../sass/main.scss */
+/* line 98, ../sass/main.scss */
 .container .work-container .design #design {
   cursor: pointer;
   display: block;
@@ -97,11 +105,11 @@ html {
   margin: auto;
   transition: .2s ease-in-out;
 }
-/* line 102, ../sass/main.scss */
+/* line 109, ../sass/main.scss */
 .container .work-container .design #design:hover {
   transform: scale(1.1);
 }
-/* line 108, ../sass/main.scss */
+/* line 115, ../sass/main.scss */
 .container .nav-bg {
   position: fixed;
   margin: 0;
@@ -109,33 +117,34 @@ html {
   background: white;
   left: 0px;
   bottom: 0;
+  opacity: 0.95;
   z-index: 0;
 }
-/* line 117, ../sass/main.scss */
+/* line 124, ../sass/main.scss */
 .container .nav-bg .bottom-nav {
   z-index: 1;
   background: white;
   bottom: 20px;
   border-bottom: 1px solid #000000;
 }
-/* line 123, ../sass/main.scss */
+/* line 130, ../sass/main.scss */
 .container .nav-bg .bottom-nav .content {
   display: inline;
   text-align: center;
 }
 
-/* line 130, ../sass/main.scss */
+/* line 137, ../sass/main.scss */
 ul {
   list-style: none;
 }
 
-/* line 133, ../sass/main.scss */
+/* line 140, ../sass/main.scss */
 li {
   cursor: pointer;
   display: inline-block;
   margin: 0 3% 0 3%;
 }
-/* line 138, ../sass/main.scss */
+/* line 145, ../sass/main.scss */
 li .cross {
   display: block;
   position: absolute;
@@ -145,7 +154,7 @@ li .cross {
   width: 30px;
 }
 
-/* line 148, ../sass/main.scss */
+/* line 155, ../sass/main.scss */
 .nav_line {
   display: block;
   position: relative;
@@ -153,7 +162,7 @@ li .cross {
   margin-left: 0;
 }
 
-/* line 154, ../sass/main.scss */
+/* line 161, ../sass/main.scss */
 #jahan {
   margin: 0;
   width: auto;
@@ -162,7 +171,7 @@ li .cross {
   max-height: 100%;
 }
 
-/* line 163, ../sass/main.scss */
+/* line 170, ../sass/main.scss */
 .definition span {
   position: absolute;
   font-family: "Nunito", sans-serif;
@@ -178,7 +187,7 @@ li .cross {
   animation: rotateDef 15s linear infinite 0s;
 }
 
-/* line 175, ../sass/main.scss */
+/* line 182, ../sass/main.scss */
 .definition span:nth-child(2) {
   -webkit-animation-delay: 3s;
   -moz-animation-delay: 3s;
@@ -187,7 +196,7 @@ li .cross {
   animation-delay: 3s;
 }
 
-/* line 175, ../sass/main.scss */
+/* line 182, ../sass/main.scss */
 .definition span:nth-child(3) {
   -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
@@ -196,7 +205,7 @@ li .cross {
   animation-delay: 6s;
 }
 
-/* line 175, ../sass/main.scss */
+/* line 182, ../sass/main.scss */
 .definition span:nth-child(4) {
   -webkit-animation-delay: 9s;
   -moz-animation-delay: 9s;
@@ -205,7 +214,7 @@ li .cross {
   animation-delay: 9s;
 }
 
-/* line 175, ../sass/main.scss */
+/* line 182, ../sass/main.scss */
 .definition span:nth-child(5) {
   -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
