--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -57,12 +57,19 @@ html {
 
 		.software{
 			float: left;
-			//border: 1px solid #000000;
+			border-right: 0.5px solid #D8D8D8;
 			height: 40vw;
 			position: relative;
 			display: block;
 			margin-top: 50px;
 			margin-bottom: 50px;
+			text-align: center;
+			.projects{
+				display: inline-block;
+				//top: 50%;
+				margin: 0;
+				width: 80%;
+			}
 			#code{
 				cursor: pointer;
 				display: block;
@@ -112,7 +119,7 @@ html {
 		background: white;
 		left: 0px;
 		bottom: 0;
-		//height: px;
+		opacity: 0.95;
 		z-index: 0;
 		.bottom-nav{
 			z-index: 1;
