--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -11,7 +11,6 @@ html, body {
 }
 
 html {
-	//	background-image: url("../images/bg_about.png") no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -20,14 +19,16 @@ html {
 
 
 .container {
-	font-family: $title-font;
+	font-family: $body-font;
 	padding-left: 2%;
 	.intro-name {
+		font-family: $title-font;
 		display: block;
 		color: $text-color;
 		font-size: 40px;
 	}
 	.definition {
+		font-family: $title-font;
 		display: block;
 	}
 	.abt-container {
@@ -45,7 +46,7 @@ html {
 		}
 
 		.bio {
-			font-family: $title-font;
+			//font-family: $title-font;
 			float: left;
 			margin: 0;
 			padding-left: 15px;
@@ -65,10 +66,31 @@ html {
 			margin-bottom: 50px;
 			text-align: center;
 			.projects{
-				display: inline-block;
-				//top: 50%;
+				display: block;
 				margin: 0;
-				width: 80%;
+				.project-container{
+					display: table;
+					content: " ";
+					.projectCell{
+						cursor: pointer;
+						font-weight: 400;
+						padding: 10px;
+						transition: .2s ease-in-out;
+						.projectContent:hover{
+							transform: scale(1.1);
+						}
+					}
+					.description {
+						width: 80%;
+						text-align: center;
+						margin: auto;
+						padding-bottom: 10px;
+						color: #444;
+						margin-top: 10px;
+						font-size: 14px;
+						line-height: 1.8;
+					}
+				}
 			}
 			#code{
 				cursor: pointer;
