--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -32,59 +32,61 @@ html {
   display: block;
 }
 /* line 35, ../sass/main.scss */
-.container .abt-container .section {
-  position: relative;
-  display: block;
-  font-family: "Raleway", sans-serif;
-  font-weight: 300;
-  padding-top: 40px;
-}
-/* line 42, ../sass/main.scss */
 .container .abt-container .my_img {
   float: right;
   height: 50vw;
   position: relative;
+  top: 50%;
+  transform: translateY(-20%);
 }
-/* line 48, ../sass/main.scss */
+/* line 43, ../sass/main.scss */
 .container .abt-container .bio {
   float: left;
   margin: 0;
   padding-left: 15px;
   font-weight: 300;
 }
-/* line 59, ../sass/main.scss */
+/* line 51, ../sass/main.scss */
+.container .section {
+  padding-left: -2%;
+  position: relative;
+  display: block;
+  font-family: "Raleway", sans-serif;
+  font-weight: 300;
+  padding-top: 40px;
+}
+/* line 62, ../sass/main.scss */
 .container .work-container .software {
   float: left;
   border-right: 0.5px solid #D8D8D8;
   height: 40vw;
   position: relative;
-  display: block;
   margin-top: 50px;
   margin-bottom: 50px;
   text-align: center;
 }
-/* line 68, ../sass/main.scss */
+/* line 71, ../sass/main.scss */
 .container .work-container .software .projects {
   display: block;
   margin: 0;
 }
-/* line 71, ../sass/main.scss */
+/* line 74, ../sass/main.scss */
 .container .work-container .software .projects .project-container {
   display: table;
   content: " ";
 }
-/* line 74, ../sass/main.scss */
+/* line 77, ../sass/main.scss */
 .container .work-container .software .projects .project-container .projectCell {
   cursor: pointer;
   font-weight: 400;
   padding: 10px;
   transition: .2s ease-in-out;
 }
-/* line 79, ../sass/main.scss */
+/* line 82, ../sass/main.scss */
 .container .work-container .software .projects .project-container .projectCell .projectContent:hover {
   transform: scale(1.1);
 }
-/* line 83, ../sass/main.scss */
+/* line 86, ../sass/main.scss */
 .container .work-container .software .projects .project-container .description {
   width: 80%;
   text-align: center;
@@ -95,7 +97,7 @@ html {
   font-size: 14px;
   line-height: 1.8;
 }
-/* line 95, ../sass/main.scss */
+/* line 98, ../sass/main.scss */
 .container .work-container .software #code {
   cursor: pointer;
   display: block;
@@ -107,11 +109,11 @@ html {
   margin: auto;
   transition: .2s ease-in-out;
 }
-/* line 107, ../sass/main.scss */
+/* line 110, ../sass/main.scss */
 .container .work-container .software #code:hover {
   transform: scale(1.1);
 }
-/* line 112, ../sass/main.scss */
+/* line 115, ../sass/main.scss */
 .container .work-container .design {
   float: right;
   height: 40vw;
@@ -120,7 +122,7 @@ html {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-/* line 120, ../sass/main.scss */
+/* line 123, ../sass/main.scss */
 .container .work-container .design #design {
   cursor: pointer;
   display: block;
@@ -132,11 +134,11 @@ html {
   margin: auto;
   transition: .2s ease-in-out;
 }
-/* line 131, ../sass/main.scss */
+/* line 134, ../sass/main.scss */
 .container .work-container .design #design:hover {
   transform: scale(1.1);
 }
-/* line 137, ../sass/main.scss */
+/* line 140, ../sass/main.scss */
 .container .nav-bg {
   position: fixed;
   margin: 0;
@@ -147,31 +149,31 @@ html {
   opacity: 0.95;
   z-index: 0;
 }
-/* line 146, ../sass/main.scss */
+/* line 149, ../sass/main.scss */
 .container .nav-bg .bottom-nav {
   z-index: 1;
   background: white;
   bottom: 20px;
   border-bottom: 1px solid #000000;
 }
-/* line 152, ../sass/main.scss */
+/* line 155, ../sass/main.scss */
 .container .nav-bg .bottom-nav .content {
   display: inline;
   text-align: center;
 }
 
-/* line 159, ../sass/main.scss */
+/* line 162, ../sass/main.scss */
 ul {
   list-style: none;
 }
 
-/* line 162, ../sass/main.scss */
+/* line 165, ../sass/main.scss */
 li {
   cursor: pointer;
   display: inline-block;
   margin: 0 3% 0 3%;
 }
-/* line 167, ../sass/main.scss */
+/* line 170, ../sass/main.scss */
 li .cross {
   display: block;
   position: absolute;
@@ -181,7 +183,7 @@ li .cross {
   width: 30px;
 }
 
-/* line 177, ../sass/main.scss */
+/* line 180, ../sass/main.scss */
 .nav_line {
   display: block;
   position: relative;
@@ -189,16 +191,15 @@ li .cross {
   margin-left: 0;
 }
 
-/* line 183, ../sass/main.scss */
+/* line 186, ../sass/main.scss */
 #jahan {
-  margin: 0;
   width: auto;
   height: auto;
   max-width: 100%;
   max-height: 100%;
 }
 
-/* line 192, ../sass/main.scss */
+/* line 194, ../sass/main.scss */
 .definition span {
   position: absolute;
   font-family: "Nunito", sans-serif;
@@ -214,7 +215,7 @@ li .cross {
   animation: rotateDef 15s linear infinite 0s;
 }
 
-/* line 204, ../sass/main.scss */
+/* line 206, ../sass/main.scss */
 .definition span:nth-child(2) {
   -webkit-animation-delay: 3s;
   -moz-animation-delay: 3s;
@@ -223,7 +224,7 @@ li .cross {
   animation-delay: 3s;
 }
 
-/* line 204, ../sass/main.scss */
+/* line 206, ../sass/main.scss */
 .definition span:nth-child(3) {
   -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
@@ -232,7 +233,7 @@ li .cross {
   animation-delay: 6s;
 }
 
-/* line 204, ../sass/main.scss */
+/* line 206, ../sass/main.scss */
 .definition span:nth-child(4) {
   -webkit-animation-delay: 9s;
   -moz-animation-delay: 9s;
@@ -241,7 +242,7 @@ li .cross {
   animation-delay: 9s;
 }
 
-/* line 204, ../sass/main.scss */
+/* line 206, ../sass/main.scss */
 .definition span:nth-child(5) {
   -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
