--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -50,7 +50,7 @@ html {
 .container .section {
   padding-left: -2%;
   position: relative;
-  display: block;
+  display: inline-block;
   font-family: "Raleway", sans-serif;
   font-weight: 300;
   padding-top: 40px;
@@ -58,9 +58,9 @@ html {
 /* line 62, ../sass/main.scss */
 .container .work-container .software {
   float: left;
-  border-right: 0.5px solid #D8D8D8;
   height: 40vw;
   position: relative;
+  display: block;
   margin-top: 50px;
   margin-bottom: 50px;
   text-align: center;
@@ -78,15 +78,16 @@ html {
 /* line 77, ../sass/main.scss */
 .container .work-container .software .projects .project-container .projectCell {
   cursor: pointer;
-  font-weight: 400;
+  font-weight: bold;
+  font-size: large;
   padding: 10px;
   transition: .2s ease-in-out;
 }
-/* line 82, ../sass/main.scss */
+/* line 83, ../sass/main.scss */
 .container .work-container .software .projects .project-container .projectCell .projectContent:hover {
   transform: scale(1.1);
 }
-/* line 86, ../sass/main.scss */
+/* line 87, ../sass/main.scss */
 .container .work-container .software .projects .project-container .description {
   width: 80%;
   text-align: center;
@@ -94,10 +95,11 @@ html {
   padding-bottom: 10px;
   color: #444;
   margin-top: 10px;
+  font-weight: lighter;
   font-size: 14px;
   line-height: 1.8;
 }
-/* line 98, ../sass/main.scss */
+/* line 100, ../sass/main.scss */
 .container .work-container .software #code {
   cursor: pointer;
   display: block;
@@ -109,11 +111,11 @@ html {
   margin: auto;
   transition: .2s ease-in-out;
 }
-/* line 110, ../sass/main.scss */
+/* line 112, ../sass/main.scss */
 .container .work-container .software #code:hover {
   transform: scale(1.1);
 }
-/* line 115, ../sass/main.scss */
+/* line 117, ../sass/main.scss */
 .container .work-container .design {
   float: right;
   height: 40vw;
@@ -122,7 +124,7 @@ html {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-/* line 123, ../sass/main.scss */
+/* line 125, ../sass/main.scss */
 .container .work-container .design #design {
   cursor: pointer;
   display: block;
@@ -134,11 +136,11 @@ html {
   margin: auto;
   transition: .2s ease-in-out;
 }
-/* line 134, ../sass/main.scss */
+/* line 136, ../sass/main.scss */
 .container .work-container .design #design:hover {
   transform: scale(1.1);
 }
-/* line 140, ../sass/main.scss */
+/* line 142, ../sass/main.scss */
 .container .nav-bg {
   position: fixed;
   margin: 0;
@@ -149,31 +151,31 @@ html {
   opacity: 0.95;
   z-index: 0;
 }
-/* line 149, ../sass/main.scss */
+/* line 151, ../sass/main.scss */
 .container .nav-bg .bottom-nav {
   z-index: 1;
   background: white;
   bottom: 20px;
   border-bottom: 1px solid #000000;
 }
-/* line 155, ../sass/main.scss */
+/* line 157, ../sass/main.scss */
 .container .nav-bg .bottom-nav .content {
   display: inline;
   text-align: center;
 }
 
-/* line 162, ../sass/main.scss */
+/* line 164, ../sass/main.scss */
 ul {
   list-style: none;
 }
 
-/* line 165, ../sass/main.scss */
+/* line 167, ../sass/main.scss */
 li {
   cursor: pointer;
   display: inline-block;
   margin: 0 3% 0 3%;
 }
-/* line 170, ../sass/main.scss */
+/* line 172, ../sass/main.scss */
 li .cross {
   display: block;
   position: absolute;
@@ -183,7 +185,7 @@ li .cross {
   width: 30px;
 }
 
-/* line 180, ../sass/main.scss */
+/* line 182, ../sass/main.scss */
 .nav_line {
   display: block;
   position: relative;
@@ -191,7 +193,7 @@ li .cross {
   margin-left: 0;
 }
 
-/* line 186, ../sass/main.scss */
+/* line 188, ../sass/main.scss */
 #jahan {
   width: auto;
   height: auto;
@@ -199,7 +201,7 @@ li .cross {
   max-height: 100%;
 }
 
-/* line 194, ../sass/main.scss */
+/* line 196, ../sass/main.scss */
 .definition span {
   position: absolute;
   font-family: "Nunito", sans-serif;
@@ -215,7 +217,7 @@ li .cross {
   animation: rotateDef 15s linear infinite 0s;
 }
 
-/* line 206, ../sass/main.scss */
+/* line 208, ../sass/main.scss */
 .definition span:nth-child(2) {
   -webkit-animation-delay: 3s;
   -moz-animation-delay: 3s;
@@ -224,7 +226,7 @@ li .cross {
   animation-delay: 3s;
 }
 
-/* line 206, ../sass/main.scss */
+/* line 208, ../sass/main.scss */
 .definition span:nth-child(3) {
   -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
@@ -233,7 +235,7 @@ li .cross {
   animation-delay: 6s;
 }
 
-/* line 206, ../sass/main.scss */
+/* line 208, ../sass/main.scss */
 .definition span:nth-child(4) {
   -webkit-animation-delay: 9s;
   -moz-animation-delay: 9s;
@@ -242,7 +244,7 @@ li .cross {
   animation-delay: 9s;
 }
 
-/* line 206, ../sass/main.scss */
+/* line 208, ../sass/main.scss */
 .definition span:nth-child(5) {
   -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
